Start using Keyword Cloud, removing Concept Map.

--- a/source/_posts/19/05/01/190501m130707.md
+++ b/source/_posts/19/05/01/190501m130707.md
@@ -21,17 +21,29 @@ date: 2019-05-01 13:07:07
   <li><strong>2019-05-05:</strong> <a href="#190505m080414">Section</a>.</li>
   <li><strong>2019-05-06:</strong> <a href="#190505m204247">Section</a>.</li>
   <li><strong>2019-05-07:</strong> <a href="#190506m074020">Section</a>.</li>
+  <li><strong>2019-05-08:</strong> <a href="#190508m064507">Section</a>.</li>
+  <li><strong>2019-05-09:</strong> <a href="#190509m073023">Section</a>.</li>
+  <li><strong>2019-05-??:</strong> <a href="#xx">Section</a>.</li>
 </ol>
 <h2>2019-05<a id="190501m131032"></a></h2>
 <div class="kwCloud">
   <div class="itm s3">Exercising</div>
   <div class="itm s3">Volunteering</div>
   <div class="itm s2">Toughness</div>
+  <div class="itm s2">Live inside "the zone"</div>
   <div class="itm s1">{ Twice }</div>
   <div class="itm s1">{ Kpop }</div>
   <div class="itm s1">{ Node.js }</div>
   <div class="itm s1">{ Express.js }</div>
-  <div class="itm s1">{ LoveAndHappiness }</div>
+  <div class="itm s2">{ Back-end }</div>
+  <div class="itm s3">{ LoveAndHappiness } project</div>
+  <div class="itm s2">{ Woody }</div>
+  <div class="itm s1">{ Vue.js }</div>
+  <div class="itm s1">{ Bootstrap }</div>
+  <div class="itm s1">{ SASS } and { SCSS }</div>
+  <div class="itm s1">{ CSS 的模組化 }</div>
+  <div class="itm s1">{ Git }</div>
+  <div class="itm s1">{ Marginal utility } of doing everything</div>
 </div>
 <ol>
   <li><strong>( Music ) { TWICE } - Heart Shaker - acoustic remix:</strong> <a href="https://youtu.be/D2Fkg1MOOIM">Link</a>.</li>
@@ -64,6 +76,34 @@ date: 2019-05-01 13:07:07
           <li><strong>Exercising:</strong> This is the 2nd time I did this after few years without exercising.</li>
           <li><strong>Understand project { LoveAndHappiness }:</strong> Try to understand
 the structure of project { LoveAndHappiness }, with the help from <code>Woody</code> from phone.</li>
+        </ol>
+      </li>
+      <li><strong>190505:</strong>
+        <ol>
+          <li><strong>Exercising:</strong> This is the 3nd time I did this after few years without exercising.</li>
+          <li><strong>Do I really need little sensation stimulation?:</strong> I'm thinking about do I really need any form of entertainment? Can I have a life totally without any entertainment and those little sensation stimulation? What is the life looks like if most of time I don't have (need) those things?</li>
+          <li><strong>Understand structure of { LoveAndHappiness }:</strong> Hard to guess, the front-end is not finished yet, so it is hard to guess what is the meaning of those API data.</li>
+          <li><strong>12:30 Learning { Express.js }.</strong></li>
+        </ol>
+      </li>
+      <li><strong>190506:</strong>
+        <ol>
+          <li><strong>Exercising:</strong> This is the 4nd time I did this after few years without exercising.</li>
+          <li><strong>( Git ) Don't know how to { git pull } from { LoveAndHappiness }:</strong> After few hours of struggling, <code>woody</code> solved my problem with 3 lines of commands.</li>
+        </ol>
+      </li>
+      <li><strong>190507:</strong>
+        <ol>
+          <li><strong>Exercising:</strong> <a href="https://youtu.be/cZnsLVArIt8">Brutal HIIT ladder workout - 20 minute HIIT workout at home</a>. The routine is as same as yesterday, but i make it less intense for myself, I can't fully follow the routine yet.</li>
+          <li><strong>{ Git }:</strong> Lean many basics [ things ]-[ operation ].</li>
+          <li><strong>( CSS ) { SCSS } 物件導向模組設計 (1):</strong> <a href="https://blog.chh.tw/posts/scss-object-oriented/#lkp">Link</a>.</li>
+        </ol>
+      </li>
+      <li><strong>190508:</strong>
+        <ol>
+          <li><strong>( CSS ) CSS 方法論與 Atomic CSS:</strong> <a href="https://blog.techbridge.cc/2017/04/29/css-methodology-atomiccss/">Link</a>. Useful.</li>
+          <li><strong>Working on { LoveAndHappiness } ,, styling.</strong></li>
+          <li><strong>Troubleshooting.</strong></li>
         </ol>
       </li>
     </ol>
@@ -132,7 +172,7 @@ the structure of project { LoveAndHappiness }, with the help from <code>Woody</c
 
 <h2>2019-05-05<a id="190505m080414"></a></h2>
 <div class="kwCloud">
-  <div class="itm s1">Do I really need entertainment?</div>
+  <div class="itm s1">Do I really need little sensation stimulation?</div>
   <div class="itm s2">Exercising</div>
   <div class="itm s1">Toughness</div>
   <div class="itm s1">Back-end</div>
@@ -142,7 +182,7 @@ the structure of project { LoveAndHappiness }, with the help from <code>Woody</c
   <div class="itm s1">{ Bootstrap }</div>
 </div>
 <ol>
-  <li><strong>Do I really need entertainment?:</strong> I'm thinking about do I really need any form of entertainment? Can I have a life totally without any entertainment and sensation satisfaction? What is the life looks like if most of time I don't have (need) those things?</li>
+  <li><strong>Do I really need little sensation stimulation?:</strong> I'm thinking about do I really need any form of entertainment? Can I have a life totally without any entertainment and those little sensation stimulation? What is the life looks like if most of time I don't have (need) those things?</li>
   <li><strong>( http ) { PUT } vs. { POST } in { REST }:</strong>
     <ol>
       <li><strong>Link:</strong> <a href="https://stackoverflow.com/questions/630453/put-vs-post-in-rest">Link</a>.</li>
@@ -201,25 +241,230 @@ the structure of project { LoveAndHappiness }, with the help from <code>Woody</c
   <div class="itm s1">Back-end</div>
   <div class="itm s1">{ Express.js }</div>
   <div class="itm s1">{ LoveAndHappiness }</div>
+  <div class="itm s2">{ git }</div>
 </div>
 <ol>
+  <li><strong>( CSS ) ( SASS ) { @mixin } "function":</strong> <a href="https://stackoverflow.com/questions/40338877/css-scss-media-query-or-class">Link</a>.</li>
+  <li><strong>( Cloud database ) What is { Firestore }-{ firebase }?:</strong> <a href="https://youtu.be/sYNjEzcOTOs?list=PLillGF-RfqbYsOOycB67Raf9dwmL6Y31M&t=17">Link</a>.</li>
+  <li><strong>( Back-end ) { Traversy Media } - { MEAN } stack front To back:</strong>
+    <ol>
+      <li><strong>05:00 Dependency for back-end project:</strong> <a href="https://youtu.be/DQ9pZ2NKXRo?list=PLillGF-RfqbZMNtaOXJQiDebNXjVapWPZ&t=300">Link</a>. It includes - express, mongoose, bcryptjs, cors, jsonwebtoken, body-parser, passport, passport-jwt. And finally Brad use <code>npm install</code> to install those non-exists dependencies, list in <code>package.json</code>, at once.</li>
+      <li><strong>09:14 Install { nodemon } globally:</strong> <a href="https://youtu.be/DQ9pZ2NKXRo?list=PLillGF-RfqbZMNtaOXJQiDebNXjVapWPZ&t=554">Link</a>.</li>
+      <li><strong>18:09 Set static directory for { Angular }-[ public files ]:</strong> <a href="https://youtu.be/DQ9pZ2NKXRo?list=PLillGF-RfqbZMNtaOXJQiDebNXjVapWPZ&t=1089">Link</a>.</li>
+    </ol>
+  </li>
+  <li><strong>( Git ) How to add remote repo, and how to change from default lable name "origin" to different one?:</strong> <code>git remote add myCustomLableName https://github.com/fooUser/barProject</code>. This will define <code>https://github.com/fooUser/barProject</code> as <code>myCustomLableName</code>.</li>
+  <li><strong>( Git ) How to merge from different repository label (instead of default "origin"):</strong>
+    <ol>
+      <li><strong>.{ git remote add myCustomLableName https://github.com/fooUser/barProject }.</strong></li>
+      <li><strong>.{ git fetch myCustomLableName }.</strong></li>
+      <li><strong>.{ git merge myCustomLableName/master }:</strong> Change <code>master</code> to the branch you want to merge.</li>
+      <li><strong>.Weirdly, I still saw this kind of usage - { git pull https://github.com/ORIGINAL_OWNER/ORIGINAL_REPOSITORY.git BRANCH_NAME }:</strong> In <a href="https://help.github.com/en/articles/merging-an-upstream-repository-into-your-fork">link</a>.</li>
+    </ol>
+  </li>
+  <li><strong>( Video ) 以平權與安全之名：穆斯林面紗禁令合理嗎？｜國際大風吹｜EP52:</strong> <a href="https://youtu.be/a-8G4SZB_Us">Link</a>.</li>
   <li><strong>By time:</strong>
     <ol>
       <li><strong>06:40 Wake up.</strong></li>
       <li><strong>06:40 ~ 07:20 Go exercising:</strong> This is the 4th time I did this after few years without exercising.</li>
-      <li><strong>07:30 ~ 07:45 Upload blog.</strong></li>
+      <li><strong>07:30 Upload blog.</strong></li>
+      <li><strong>07:45 Watching video ,, May 3rd 2019 (1)文贵在做平板称时的视频做得不标准，希望战友们不要秀文贵这样的做共28分钟:</strong><a href="https://youtu.be/4SEBoogJp24">Link</a>.</li>
+      <li><strong>07:52 Taking shower.</strong></li>
+      <li><strong>08:10 Watching video ,, 2019年4月29日：台湾．香港．将是灭共的重要之地……谷畜生侮骂一亿河南同胞必须受惩罚！:</strong><a href="https://youtu.be/1xG7TCT94Q0">Link</a>.</li>
+      <li><strong>08:25 Learning { Bootstrap } ,, basic:</strong> To <a href="https://www.w3schools.com/bootstrap4/bootstrap_typography.asp">typography</a>.</li>
+      <li><strong>08:55 Cooking.</strong></li>
+      <li><strong>09:15 Learning { Bootstrap } ,, basic:</strong> To <a href="https://www.w3schools.com/bootstrap4/bootstrap_colors.asp">colors</a>.</li>
+      <li><strong>09:50 ~ 10:00 Brushing teeth.</strong></li>
+      <li><strong>10:05 Learning { Bootstrap } ,, basic:</strong> To <a href="https://www.w3schools.com/bootstrap4/bootstrap_buttons.asp">buttons</a>.</li>
+      <li><strong>10:15 Keyboard problem:</strong> "k" key doesn't works all other key works smoothly, restarting PC doesn't works, change usb cable doesn't works, change to differnt usb socket doesn't works. The problem might not be hardware problem but software, the key mechanical function is not the problem (not "short" at there). After re-plug the usb plug to another socket few times it still don't works, but the last time I tried it, it works smoothly, very wierd problem. Last time this problem happened on "m" key.</li>
+      <li><strong>10:25 Learning { Bootstrap } ,, basic:</strong> To <a href="https://www.w3schools.com/bootstrap4/bootstrap_alerts.asp">alert</a>.</li>
+      <li><strong>11:00 Clean up useless file.</strong></li>
+      <li><strong>11:35 ~ ?? Learning { Bootstrap } ,, basic:</strong> To <a href="https://www.w3schools.com/bootstrap4/bootstrap_navs.asp">navs</a>.</li>
+      <li><strong>12:00 ~ ?? Learning { SASS }.</strong></li>
+      <li><strong>12:15 ~ 12:25 Learning { Bootstrap } ,, basic:</strong> I'm feeling too much to learn, too deep to dive into this rabbit hole, I should hold back at this moment.</li>
+      <li><strong>12:25 ~ 13:30 Misc:</strong> Taking nap, doing laundry.</li>
+      <li><strong>13:30 Watching video.</strong></li>
+      <li><strong>14:00 Understanding { MEAN } stack.</strong></li>
+      <li><strong>15:15 Thinking about aborting the idea of using web-based file manager in my CMS:</strong> Web-based file manager, such as <code>elfinder</code>, only makes the system design more complex, bad for user experience (myself). I should design like this - front-end call back-end (Express.js), then use core module of { Express.js } which can invoke shell command, to open { Nautilus } file manager directly. And no need to use { webdev } at all.</li>
+      <li><strong>16:20 Watching video:</strong> <a href="#">柴知道 - 如何做一只寄生虫？ 第二集</a>.</li>
+      <li><strong>16:30 Understanding { MEAN } stack.</strong></li>
+      <li><strong>16:50 Buying food.</strong></li>
+      <li><strong>17:20 Understanding { MEAN } stack.</strong></li>
+      <li><strong>18:00 ~ ?? Cooking and eating.</strong></li>
+      <li><strong>19:00 Watching video.</strong></li>
+      <li><strong>19:30 Don't know how to { git pull } from { LoveAndHappiness }:</strong> After few hours of struggling, <code>woody</code> solved my problem with 3 lines of commands.</li>
+      <li><strong>23:20 Sleep.</strong></li>
+    </ol>
+  </li>
+</ol>
+
+<h2>2019-05-07<a id="190506m074020"></a></h2>
+<div class="kwCloud">
+  <div class="itm s1">Exercising</div>
+  <div class="itm s1">Toughness</div>
+  <div class="itm s1">Clean the room</div>
+  <div class="itm s2">{ git }</div>
+  <div class="itm s1">{ LoveAndHappiness }</div>
+  <div class="itm s1">{ SASS } and { SCSS }</div>
+  <div class="itm s1">{ CSS 的模組化 }</div>
+  <div class="itm s1">{ Marginal utility } of doing everything</div>
+</div>
+<ol>
+  <li><strong>{ Git }:</strong>
+    <ol>
+      <li><strong>( Git ) help.github.com:</strong> <a href="https://help.github.com">Link</a>. Help center</li>
+      <li><strong>( Git ) { Git } 遠程操作詳解:</strong> <a href="http://www.ruanyifeng.com/blog/2014/06/git_remote.html">Link</a>. Good graphs and easy to understand content (still comprehensive) for beginners, solve a lot misconception for new users.</li>
+      <li><strong>( Git ) { git merge } problem ,, shows "Already up-to-date" even it is not?:</strong> Problem solved, { git } just behave like this natually. You don't have to do anything about this. See <a href="https://stackoverflow.com/questions/634546/git-merge-reports-already-up-to-date-though-there-is-a-difference">link1</a>, <a href="https://stackoverflow.com/questions/41477261/master-branch-is-already-up-to-date-and-yet-it-is-ahead-of-origin-master-by">link2</a>. --{ ... it means that the branch you’re trying to merge is a parent of your current branch. Congratulations, that’s the easiest merge you’ll ever do. }--.</li>
+      <li><strong> Git Doc - addressing merge conflict:</strong>
+        <ol>
+          <li><strong>Link:</strong> <a href="https://help.github.com/en/articles/addressing-merge-conflicts">Link</a>. Include those topics:</li>
+          <li><strong>.About merge conflicts:</strong> <a href="https://help.github.com/en/articles/about-merge-conflicts">Link</a>. Including auto merge as possible ; what cause a conflict ; <code>Merge pull request button</code>.</li>
+          <li><strong>.Resolving a merge conflict on GitHub:</strong> <a href="https://help.github.com/en/articles/resolving-a-merge-conflict-on-github">Link</a>. Including <u>conflict editor</u>.</li>
+          <li><strong>.Resolving a merge conflict using the command line and text editor:</strong> <a href="https://help.github.com/en/articles/resolving-a-merge-conflict-using-the-command-line">Link</a>. Including using <code>git status</code> to list all files that is affected by the merge conflict ; search for <code>&lt;&lt;&lt;&lt;&lt;&lt;&lt;</code> string pattern to jump to the conflict line directly.</li>
+        </ol>
+      </li>
+      <li><strong>( Git ) { git merge } two local branches:</strong> <a href="https://stackoverflow.com/questions/25053697/git-merge-two-local-branches">Link</a>.</li>
+      <li><strong>( Git ) { git remote ... }:</strong>
+        <ol>
+          <li><strong>( Git ) { git remote show origin }.</strong></li>
+          <li><strong>( Git ) { git remote -v }:</strong> Show remote repo alias. You can define alias name yourself.</li>
+          <li><strong>( Git ) { git remote add myCustomAliasName thatLongRemoteRepoUrl }.</strong> Also see <a href="https://help.github.com/en/articles/adding-a-remote">[ Doc ]-[ Adding a remote ]</a>. After this, you just need to use <code>git fetch myCustomAliasName</code> and <code>git push myCustomAliasName</code> instead of that long url everytime.</li>
+        </ol>
+      </li>
+      <li><strong>Doc - Fetching a remote:</strong> <a href="https://help.github.com/en/articles/fetching-a-remote">Link</a>. Include - git clone ; git fetch ; <strong>git merge</strong> ; git pull.</li>
+      <li><strong>( Git ) What does { origin } means:</strong> <a href="https://githowto.com/what_is_origin">Link</a>. It is a [ alias ]-[ shorthand ] of the actual long url, so instead of typing and remembering that long url, you know can just use that short alias. Of course you can define alias by command like <code>git remote add myCustomAliasName https://github.com/fooUser/barProject</code>, after this, you just need to use <code>git fetch myCustomAliasName</code> and <code>git push myCustomAliasName</code> instead of that long url everytime. // Also see <code>man git remote</code>. // Also see { Refs } (references).</li>
+      <li><strong>( Git ) What is { Refs } (references) :</strong> <a href="https://www.atlassian.com/git/tutorials/refs-and-the-reflog">Link</a>. Not fully understand.</li>
+      <li><strong>( Git ) { git branch -a }, { git branch -vv }.</strong></li>
+      <li><strong>( Git ) { git add -A } and what is { Stage } means:</strong> Mentioned in <a href="https://marklodato.github.io/visual-git-guide/index-en.html">this link</a>. It is useful in case such as, when you <code>checkout</code> to other branch and <code>checkout</code> back, you lost the new modified content if you didn't use <code>git add -A</code> before doing first <code>checkout</code>.</li>
+      <li><strong>( Git ) { git add -A } vs { git add . }:</strong> <a href="https://stackoverflow.com/questions/572549/difference-between-git-add-a-and-git-add?rq=1">Link</a>.</li>
+      <li><strong>( Git ) { git branch -m }:</strong> <a href="https://stackoverflow.com/questions/15376241/why-does-git-say-my-master-branch-is-already-up-to-date-even-though-it-is-not">Link</a>, found from top answer.</li>
+      <li><strong>( Git ) { git branch -t }:</strong> <a href="https://stackoverflow.com/questions/15376241/why-does-git-say-my-master-branch-is-already-up-to-date-even-though-it-is-not">Link</a>, found from top answer. So <code>git branch -m master bunchofhacks</code> will make a new local branch named master that "tracks" the origin (or upstream) master:</li>
+      <li><strong>( Git ) { git reset --hard }:</strong> <a href="https://stackoverflow.com/questions/15376241/why-does-git-say-my-master-branch-is-already-up-to-date-even-though-it-is-not">Link</a>, found from top answer.</li>
+      <li><strong>( Git ) Pulling via Rebase:</strong> <a href="https://www.atlassian.com/git/tutorials/syncing/git-pull">Link</a>. --{ The --rebase option can be used to ensure a linear history by preventing unnecessary merge commits. }--. Also see those graphs, they are nice.</li>
+      <li><strong>( Git ) { git pull x x --allow-unrelated-histories }:</strong> <a href="https://www.mkyong.com/git/git-pull-refusing-to-merge-unrelated-histories/">Link</a>.</li>
+      <li><strong>( Git ) { git push } problem ,, "Updates were rejected because the remote contains work that you do not have locally":</strong> <a href="https://gitbook.tw/chapters/github/fail-to-push.html">Link</a>. See the graphs, it explain the concept nicely with easy way. So there are 2 ways to solve this, pull first (and resolve conflicts), then push ; use <code>git push -f</code> (cautious on this!).</li>
+    </ol>
+  </li>
+  <li><strong>( CSS ) Sass/SCSS 簡明入門教學:</strong> <a href="https://blog.techbridge.cc/2017/06/30/sass-scss-tutorial-introduction/">Link</a>. Easy to understand, still comprehensive.</li>
+  <li><strong>( CSS ) About { Sass } ,, ampersand (&amp):</strong> <a href="https://css-tricks.com/the-sass-ampersand/">Link</a>.</li>
+  <li><strong>( CSS ) { @mixin } vs { @extend }:</strong> <a href="https://blog.techbridge.cc/2017/06/30/sass-scss-tutorial-introduction/">Link</a> ,, section 8. Also see <a href="http://thesassway.com/intermediate/understanding-placeholder-selectors">placeholder selector</a>.</li>
+  <li><strong>( CSS ) { #{} }-[ string interpolation ]:</strong> <a href="https://stackoverflow.com/questions/24885582/what-does-hash-sign-do-outside-loops-in-sass">Link1</a>, <a href="https://blog.techbridge.cc/2017/06/30/sass-scss-tutorial-introduction/">link2</a> (<code>@each</code> part).</li>
+  <li><strong>( CSS ) { SCSS } 物件導向模組設計 (1):</strong> <a href="https://blog.chh.tw/posts/scss-object-oriented/#lkp">Link</a>.</li>
+  <li><strong>( CSS ) CSS - 模組化 - methodology - OOCSS、SMACSS、BEM、CSS Modules、CSS in JS:</strong> <a href="https://cythilya.github.io/2018/06/05/css-methodologies/">Link</a>.</li>
+  <li><strong>By time:</strong>
+    <ol>
+      <li><strong>08:23 Wake up.</strong></li>
+      <li><strong>08:40 Exercising at home because raining outside:</strong> <a href="https://youtu.be/cZnsLVArIt8">Brutal HIIT Ladder Workout - 20 Minute HIIT Workout at Home</a>. Very exhausted when I done this, I'm a little trembling. I barely finish it completely, pause in the middle several times, out of breath all the time. Much harder than I thought.</li>
+      <li><strong>09:05 ~ 11:25 Watching video, cleaning room, cooking:</strong>
+        <ol>
+          <li><strong>M觀點 - #23 - 美中貿易戰川普為何亮出王牌殺手？25% 的關稅到底會對中國經濟造成多大的打擊？:</strong> <a href="https://youtu.be/w4MYm2XAn0U">Link</a>.</li>
+          <li><strong>郭文貴 - 3rd May 2019 (3) 3rd may 2019 (2)2017年的5月3号和2018年的5月3号都发生了哪些重大事件，文贵与大家分享一些过去没有讲过的事情。:</strong> <a href="https://youtu.be/QXddVpZJKSY">Link</a>.</li>
+          <li><strong>郭文貴 - May 6, 2019文贵直播谈谈，为什么川普总统要突然间的停掉，中美贸易协定共产党必须还回属于14亿中国人民的一切财富一切权力！:</strong> <a href="https://youtu.be/iIrHro8KsxY">Link</a>.</li>
+        </ol>
+      </li>
+      <li><strong>09:20 ~ 09:30 Upload blog.</strong></li>
+      <li><strong>11:30 Learning { git } ,, addressing merge conflict.</strong></li>
+      <li><strong>13:40 Still found git merge not working properly:</strong> So, now even I modified the content of README.md file, when I merge, it still didn't do conflict resolve, it shows the message <code>Already up-to-date</code>.</li>
+      <li><strong>16:00 Sleeping:</strong> { Git } problem <code>Already up-to-date</code> not solved yet, frustrated.</li>
+      <li><strong>16:40 Keep learning { git }:</strong> Problem solved, { git } just behave like this natually.</li>
+      <li><strong>16:41 Clean up { git } resources (final orginizing).</strong></li>
+      <li><strong>18:10 ~ ?? Learning { SASS }**[ object oriented ]**[ principle ]**[ mudule ].</strong></li>
+      <li><strong>18:30 ~ 18:50 Cooking.</strong></li>
+      <li><strong>18:50 Learning { SASS } vs { SCSS }:</strong> <code>SCSS</code> seems to be enhanced version of <code>SASS</code>. See <a href="https://www.sassmeister.com/">www.sassmeister.com</a> (found from <a href="https://youtu.be/TymGwiNMlh0">Kevin Powell's video</a>) to [ test ]-[ generate ]-[ compile ] <code>SASS</code> and <code>SCSS</code> in live.</li>
+      <li><strong>19:10 Learning { SCSS }.</strong></li>
+      <li><strong>20:40 ~ 21:00 Talking with another engineer 廣x of { LoveAndHappiness }:</strong> And <code>woody</code>, through group voice chat on <code>Line</code>. I think I will need to start to write css tomorrow, and push and pull frequently. Take it as a sepereate project, don't neee to always think too much to comply to previous styling (some root config and style), just make it up as soon as possible.</li>
+      <li><strong>21:15 Learning { SCSS }.</strong></li>
+      <li><strong>21:30 Update backend-end:</strong> From <code>woody</code>.</li>
+      <li><strong>21:40 Learning { CSS } methodology.</strong></li>
+      <li><strong>21:50 Brushing teeth.</strong></li>
+      <li><strong>22:00 Watching video:</strong> <a href="https://youtu.be/Hb42FoxACxc">TWICE TV "What is Love?" EP.06</a>.</li>
+    </ol>
+  </li>
+</ol>
+
+<h2>2019-05-08<a id="190508m064507"></a></h2>
+<div class="kwCloud">
+  <div class="itm s1">Exercising</div>
+  <div class="itm s1">Toughness</div>
+  <div class="itm s1">{ LoveAndHappiness }</div>
+  <div class="itm s1">{ Sass }</div>
+  <div class="itm s1">{ Bootstrap }</div>
+  <div class="itm s1">{ Vue }</div>
+  <div class="itm s1">Troubleshooting</div>
+</div>
+<ol>
+  <li><strong>( CSS ) CSS 方法論與 Atomic CSS:</strong> <a href="https://blog.techbridge.cc/2017/04/29/css-methodology-atomiccss/">Link</a>. Useful.</li>
+  <li><strong>( CSS ) CSS - 模組化 - methodology - OOCSS、SMACSS、BEM、CSS Modules、CSS in JS:</strong> <a href="https://cythilya.github.io/2018/06/05/css-methodologies/">Link</a>.</li>
+  <li><strong>( CSS ) Scss directive:</strong> <a href="https://hackmd.io/p/SywjempFW#/10">Link</a>. Including { if, else, for, each, while }.</li>
+  <li><strong>( CSS ) Sass Variable in CSS calc() function don't work?:</strong> <a href="https://stackoverflow.com/questions/17982111/sass-variable-in-css-calc-function">Link</a>. Use <code>Interpolate</code>. So you can use <code>margin: $foo</code>, but you can't use <code>margin: calc(1em + $foo)</code> you have to use <code>margin: calc(1em + #{$foo})</code> instead.</li>
+  <li><strong>( CSS ) ( Vue ) Why even { scoped } is ued, parent component selector will overwrite child component selector?:</strong> <a href="https://stackoverflow.com/questions/45898865/how-to-correctly-use-scoped-styles-in-vuejs-single-file-components">Link</a>. The root element of every component is an exception. A child component's root node will be affected by both the parent's scoped CSS and the child's scoped CSS.</li>
+  <li><strong>( CSS ) ( Vue ) { Deep } selector:</strong> <a href="https://stackoverflow.com/questions/48032006/how-do-i-use-deep-or-in-vue-js">How do I use /deep/ or &gt;&gt;&gt; in Vue.js?</a>. In parent comonent ,, scoped style, you can use <code>deep selector</code> to select child component ,, element, this will works.</li>
+  <li><strong>( Sass ) ( Vue ) How to import a { Sass } file into every vue component in an app:</strong> <a href="https://css-tricks.com/how-to-import-a-sass-file-into-every-vue-component-in-an-app/">Link</a>. <code>npm i node-sass sass-loader</code> first, then config the <code>vue.config.js</code>.</li>
+  <li><strong>( NPM ) About { --save } option and derivatives family:</strong> <a href="https://stackoverflow.com/questions/19578796/what-is-the-save-option-for-npm-install">Link1</a> <a href="https://docs.npmjs.com/cli/install">Link2</a>. { --save-prod ; --save-dev ; --save-optional ; --save-exact ; --save-bundle ... }.</li>
+  <li><strong>( Music ) { Twice } - { Likey }:</strong> <a href="https://youtu.be/V2hlQkVJZhE">Link</a>.</li>
+  <li><strong>By time:</strong>
+    <ol>
+      <li><strong>06:40 Wake up.</strong></li>
+      <li><strong>06:50 Exercising:</strong> <a href="https://youtu.be/cZnsLVArIt8">Brutal HIIT ladder workout - 20 minute HIIT workout at home</a>. The routine is as same as yesterday, but i make it less intense for myself, I can't fully follow the routine yet.</li>
+      <li><strong>07:15:</strong> Watching video.</li>
+      <li><strong>07:23:</strong> Taking shower.</li>
+      <li><strong>07:48 ~ 08:00 Uploading blog.</strong></li>
+      <li><strong>08:00 Misc.</strong></li>
+      <li><strong>08:25 Learning CSS - 模組化 - methodology.</strong></li>
+      <li><strong>09:10 Preparing ingredients and cooking.</strong></li>
+      <li><strong>09:50 Learning SCSS directive.</strong></li>
+      <li><strong>10:00 Eating:</strong> <a href="https://youtu.be/uO4hhYaJ1Qs">TWICE 何為彩彩向日葵-名井南Michaeng(MinaX彩瑛)</a>. Funny.</li>
+      <li><strong>10:20 Brushing teeth.</strong></li>
+      <li><strong>10:30 Understanding { LoveAndHappiness } structure:</strong> Understanding <code>LoveAndHappiness</code> structure before I can start to design CSS.</li>
+      <li><strong>10:35 Working on { LoveAndHappiness }:</strong> <code>header.vue</code> ,, CSS.</li>
+      <li><strong>11:00 Thinking about CSS ,, using global scope or local scope, for vue component:</strong> CSS ,, maybe I will used global CSS for 10% of amount, local CSS (<code>Vue</code> ,, <code>scoped</code> attribue) for 90% of amount. So I can have some few central config, while mostly higly decoupled.</li>
+      <li><strong>11:15 Working on { LoveAndHappiness }:</strong> <code>header.vue</code> ,, CSS.</li>
+      <li><strong>12:30 Dealing with bootstrap problem:</strong> Bootstrap in { LoveAndHappiness } is not working as expect, I build a [ new ]-[ clean ]-[ dummy ] environment to do testing.</li>
+      <li><strong>12:55 Take a nap:</strong> Problem unsolved.</li>
+      <li><strong>13:30 Watching video:</strong> <a href="https://youtu.be/OBA40znhvVU">TWICE Michaeng小劇場(MinaX彩瑛)</a>.</li>
+      <li><strong>13:35 Dealing with { bootstrap } installation problem:</strong> Building a [ new ]-[ clean ]-[ dummy ] environment to do testing.</li>
+      <li><strong>13:45 Dealing with { Sass } installation problem:</strong> Try to install <code>Sass</code> into testing vue project.</li>
+      <li><strong>14:45 Dealing with { bootstrap } problem in { LoveAndHappiness }:</strong> <code>Bootstrap</code> in <code>LoveAndHappiness</code> ,, some <code>bootstrap</code> style is overwrited by elsewhere, try to find the reason.</li>
+      <li><strong>15:05 Give up that problem, keep going on:</strong> I is probably because the global { sass } (custom) overwrite the bootstrap settins (default).</li>
+      <li><strong>15:30 { LoveAndHappiness } ,, problem ,, bootstrap not working as expect:</strong> My local testing project ,, the break point breaks at incorrect viewport width. // The problem disappeared itself don't know why, might be firefox <code>responsive design mode</code> own problem when <strong>zooming</strong> with <code>Ctrl + scroll wheel</code>.</li>
+      <li><strong>16:00 keep working on { LoveAndHappiness }.</strong></li>
+      <li><strong>16:40 Brushing teeth.</strong></li>
+      <li><strong>16:50 keep working on { LoveAndHappiness }.</strong></li>
+      <li><strong>19:00 { LoveAndHappiness } ,, solving { CSS } problem:</strong> Don't know why selector <code>[data-v-e5cb3380]</code> is generated by <code>Vue</code>, it overwrite my CSS even mine have a bit higher priority. // <strong>Solved</strong>, it is because when selector is put inside <code>&lt;style scoped&gt;</code>, <code>Vue</code> automatically issue a new unique data attibute for those html elements those selector concerned. But in [ my ]-[ this ] case, I'm writing selector inside <code>&lt;style&gt;</code> instead of <code>&lt;style scoped&gt;</code>, so <code>Vue</code> will not do this, then those selector [ become less aggressive ]-[ having less priority], then cause the "bug".</li>
+      <li><strong>19:40 keep working on { LoveAndHappiness }.</strong></li>
+      <li><strong>20:00 ~ ?? Preparing ingredients, cooking, eating.</strong></li>
+      <li><strong>21:15 ~ ?? keep working on { LoveAndHappiness }.</strong></li>
+      <li><strong>22:30 Brushing teeth.</strong></li>
+      <li><strong>22:40 Reflect.</strong></li>
+      <li><strong>22:48 Watching video.</strong></li>
+      <li><strong>23:00 Sleep.</strong></li>
+    </ol>
+  </li>
+</ol>
+
+<h2>2019-05-09<a id="190509m073023"></a></h2>
+<div class="kwCloud">
+  <div class="itm s1">Back-end</div>
+  <div class="itm s1">{ Express.js }</div>
+  <div class="itm s1">{ LoveAndHappiness }</div>
+</div>
+<ol>
+  <li><strong>By time:</strong>
+    <ol>
+      <li><strong>07:10 Wake up:</strong> A bit ache and tired, don't want to excercise.</li>
+      <li><strong>07:20 Upload blog.</strong></li>
       <li><strong>?? Cooking, eating, reading, thinking.</strong></li>
-      <li><strong>20:00 ~ ?? Talking with another engineer of { LoveAndHappiness }.</strong></li>
     </ol>
   </li>
   <li><strong>:</strong> <a href="">Link</a>.</li>
 </ol>
 
-<h2>2019-05-07<a id="190506m074020"></a></h2>
+<hr>
+
+<h2>2019-05-??<a id="xx"></a></h2>
 <div class="kwCloud">
   <div class="itm s1">??</div>
   <div class="itm s1">Exercising</div>
-  <div class="itm s1">Toughness</div>
   <div class="itm s1">Back-end</div>
   <div class="itm s1">{ Express.js }</div>
   <div class="itm s1">{ LoveAndHappiness }</div>
@@ -228,7 +473,7 @@ the structure of project { LoveAndHappiness }, with the help from <code>Woody</c
   <li><strong>By time:</strong>
     <ol>
       <li><strong>?? Wake up.</strong></li>
-      <li><strong>?? Go exercising:</strong> This is the 4th time I did this after few years without exercising.</li>
+      <li><strong>?? Go exercising.</strong></li>
       <li><strong>?? Upload blog.</strong></li>
       <li><strong>?? Cooking, eating, reading, thinking.</strong></li>
     </ol>
